@@ -3,6 +3,8 @@ Use [JDK 15](https://www.oracle.com/uk/java/technologies/javase-jdk15-downloads.
 
 Install [JavaFx](https://openjfx.io/) and read the installation docs for it.
 
+Add VM-Options to IDE for JavaFx, ```--module-path yourpath/lib --add-modules javafx.controls,javafx.fxml```
+
 Once JavaFx is installed you may want to use [this](https://stackoverflow.com/questions/55760343/error-javafx-runtime-components-are-missing-javafx-11-and-openjdk-11-and-ecli) stackoverflow solution to run the application.
 
 Project uses [Lombok](https://projectlombok.org/)
